--- a/src/shbat_pkg/config/nav2_params_mapping.yaml
+++ b/src/shbat_pkg/config/nav2_params_mapping.yaml
@@ -1,3 +1,15 @@
+###############################################################################
+# Nav2 Parameters for SLAM MAPPING Mode
+# 
+# Optimized for accurate map building with minimal drift:
+# - SLOW speeds (0.3 m/s linear, 1.0 rad/s angular)
+# - SMOOTH acceleration profiles
+# - TIGHT tolerances for precise positioning
+# - Conservative costmap settings
+#
+# Use this config when building maps with SLAM Toolbox or RTAB-Map
+###############################################################################
+
 amcl:
   ros__parameters:
     use_sim_time: False
@@ -42,13 +54,13 @@ amcl:
 bt_navigator:
   ros__parameters:
     use_sim_time: False
-    global_frame: map  # Use RTAB-Map's map frame for global planning
+    global_frame: map
     robot_base_frame: base_link
     odom_topic: /odometry/filtered
     bt_loop_duration: 10
     default_server_timeout: 20
     wait_for_service_timeout: 1000
-    transform_tolerance: 2.0  # Added: Wait up to 2s for transforms
+    transform_tolerance: 2.0
     plugin_lib_names:
       - nav2_compute_path_to_pose_action_bt_node
       - nav2_compute_path_through_poses_action_bt_node
@@ -108,9 +120,9 @@ bt_navigator_navigate_to_pose_rclcpp_node:
 
 controller_server:
   ros__parameters:
-    use_sim_time: False  # Changed to False for real robot
-    controller_frequency: 20.0  # Increased from 1.0 Hz to 20 Hz for smooth control
-    min_x_velocity_threshold: 0.001  # Reduced threshold
+    use_sim_time: False
+    controller_frequency: 20.0
+    min_x_velocity_threshold: 0.001
     min_y_velocity_threshold: 0.001
     min_theta_velocity_threshold: 0.001
     failure_tolerance: 0.3
@@ -121,37 +133,38 @@ controller_server:
 
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
-      required_movement_radius: 0.3  # Reduced from 0.5m - less strict
-      movement_time_allowance: 30.0  # Increased from 10s - more time to make progress
+      required_movement_radius: 0.5
+      movement_time_allowance: 30.0
 
     general_goal_checker:
       stateful: True
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.15  # Slightly relaxed
-      yaw_goal_tolerance: 0.25  # Tightened for better orientation
+      xy_goal_tolerance: 0.10  # TIGHT: 10cm for mapping precision
+      yaw_goal_tolerance: 0.15  # TIGHT: ~8.6 degrees
 
     FollowPath:
       plugin: "nav2_regulated_pure_pursuit_controller::RegulatedPurePursuitController"
-      desired_linear_vel: 0.8  # 0.8 m/s = 80 cm/s normal speed (increased)
-      max_linear_vel: 1.2  # 1.2 m/s maximum (increased)
+      # SLOW SPEEDS FOR MAPPING
+      desired_linear_vel: 0.3  # 30 cm/s - slow and steady
+      max_linear_vel: 0.5  # 50 cm/s maximum
       min_linear_vel: 0.0
-      max_angular_vel: 3.0  # 3.0 rad/s = 172 deg/s (increased)
-      min_angular_vel: 0.1  # Minimum rotation speed (lowered)
-      lookahead_dist: 0.6  # Reduced for tighter following
-      min_lookahead_dist: 0.3  # Reduced minimum
-      max_lookahead_dist: 1.0  # Reduced maximum
+      max_angular_vel: 1.0  # 1.0 rad/s = 57 deg/s - slow turns
+      min_angular_vel: 0.05
+      lookahead_dist: 0.4  # Short lookahead for precise following
+      min_lookahead_dist: 0.2
+      max_lookahead_dist: 0.6
       lookahead_time: 1.5
       use_rotate_to_heading: true
-      rotate_to_heading_angular_vel: 2.5  # Rotation speed when aligning (increased)
-      transform_tolerance: 1.0  # Increased tolerance for TF timing issues
-      use_velocity_scaled_lookahead_dist: true  # Enable adaptive lookahead
-      allow_reversing: false  # Disabled reversing for safety
-      use_regulated_linear_velocity_scaling: true  # Enable velocity regulation
-      use_collision_detection: true  # Re-enabled for safety
-      cost_scaling_dist: 0.6  # Distance to scale velocity based on obstacles
-      cost_scaling_gain: 1.0  # How much to reduce velocity near obstacles
-      max_robot_pose_search_dist: 5.0  # How far to search for valid poses
-      inflation_cost_scaling_factor: 3.0  # Match costmap inflation
+      rotate_to_heading_angular_vel: 0.8  # Slow rotation for alignment
+      transform_tolerance: 1.0
+      use_velocity_scaled_lookahead_dist: true
+      allow_reversing: false
+      use_regulated_linear_velocity_scaling: true
+      use_collision_detection: true
+      cost_scaling_dist: 0.6
+      cost_scaling_gain: 1.0
+      max_robot_pose_search_dist: 5.0
+      inflation_cost_scaling_factor: 3.0
 
 local_costmap:
   local_costmap:
@@ -169,8 +182,8 @@ local_costmap:
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 5.0  # Moderate scaling for balance
-        inflation_radius: 0.30  # 30cm inflation (must be >= robot radius 0.25m)
+        cost_scaling_factor: 5.0
+        inflation_radius: 0.30
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -190,18 +203,18 @@ local_costmap:
           raytrace_max_range: 10.0
           raytrace_min_range: 0.0
           obstacle_max_range: 9.0
-          obstacle_min_range: 0.25  # 25cm - ignore robot body/antennas/beams
+          obstacle_min_range: 0.25
         point_cloud:
           topic: /zed2i/zed_node/point_cloud/cloud_registered
           max_obstacle_height: 2.0
-          min_obstacle_height: 0.40  # INCREASED: 40cm min - ignore floor and low objects
+          min_obstacle_height: 0.40
           clearing: True
           marking: True
           data_type: "PointCloud2"
           raytrace_max_range: 5.0
           raytrace_min_range: 0.0
           obstacle_max_range: 4.0
-          obstacle_min_range: 0.50  # INCREASED: 50cm - ignore robot body completely
+          obstacle_min_range: 0.50
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
         map_subscribe_transient_local: True
@@ -215,8 +228,8 @@ global_costmap:
       global_frame: map
       robot_base_frame: base_link
       use_sim_time: False
-      rolling_window: true  # CHANGED: Use rolling window for odometry-only navigation
-      width: 100  # 100 cells × 0.10m = 10m x 10m rolling window
+      rolling_window: true
+      width: 100
       height: 100
       robot_radius: 0.25
       resolution: 0.10
@@ -235,25 +248,25 @@ global_costmap:
           raytrace_max_range: 10.0
           raytrace_min_range: 0.0
           obstacle_max_range: 9.0
-          obstacle_min_range: 0.25  # 25cm - ignore robot body/antennas/beams
+          obstacle_min_range: 0.25
         point_cloud:
           topic: /zed2i/zed_node/point_cloud/cloud_registered
           max_obstacle_height: 2.0
-          min_obstacle_height: 0.40  # INCREASED: 40cm min - ignore floor and low objects
+          min_obstacle_height: 0.40
           clearing: True
           marking: True
           data_type: "PointCloud2"
           raytrace_max_range: 5.0
           raytrace_min_range: 0.0
           obstacle_max_range: 4.0
-          obstacle_min_range: 0.50  # INCREASED: 50cm - ignore robot body completely
+          obstacle_min_range: 0.50
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 5.0  # Moderate scaling for balance
-        inflation_radius: 0.30  # 30cm inflation (must be >= robot radius 0.25m)
+        cost_scaling_factor: 5.0
+        inflation_radius: 0.30
       always_send_full_costmap: True
 
 map_server:
@@ -273,14 +286,13 @@ planner_server:
   ros__parameters:
     expected_planner_frequency: 20.0
     use_sim_time: False
-    transform_tolerance: 2.0  # Added: Wait up to 2s for transforms
+    transform_tolerance: 2.0
     planner_plugins: ["GridBased"]
     GridBased:
       plugin: "nav2_navfn_planner/NavfnPlanner"
       tolerance: 0.5
       use_astar: true
       allow_unknown: true
-    # Costmap for planning
     costmap_topic: global_costmap/costmap_raw
     footprint_topic: global_costmap/published_footprint
 
@@ -302,17 +314,17 @@ behavior_server:
     behavior_plugins: ["spin", "backup", "drive_on_heading", "assisted_teleop", "wait"]
     spin:
       plugin: "nav2_behaviors/Spin"
-      simulate_ahead_time: 2.0  # Increased from 1.0s for slower spins
-      max_rotational_vel: 2.5  # 2.5 rad/s for spinning (increased)
-      min_rotational_vel: 0.3  # 0.3 rad/s minimum (lowered)
-      rotational_acc_lim: 5.0  # Acceleration (increased)
-      time_allowance: 20.0  # NEW: Allow 20 seconds to complete spin
+      simulate_ahead_time: 2.0
+      max_rotational_vel: 0.8  # SLOW: 0.8 rad/s for mapping spins
+      min_rotational_vel: 0.2
+      rotational_acc_lim: 2.0  # Gentle acceleration
+      time_allowance: 30.0
     backup:
       plugin: "nav2_behaviors/BackUp"
       simulate_ahead_time: 1.0
-      max_linear_vel: 0.7  # 0.7 m/s for backup (increased)
-      min_linear_vel: 0.1  # 0.1 m/s minimum
-      linear_acc_lim: 2.0  # Acceleration (increased)
+      max_linear_vel: 0.3  # SLOW: 30 cm/s for backup
+      min_linear_vel: 0.05
+      linear_acc_lim: 1.0  # Gentle acceleration
     drive_on_heading:
       plugin: "nav2_behaviors/DriveOnHeading"
     wait:
@@ -321,12 +333,12 @@ behavior_server:
       plugin: "nav2_behaviors/AssistedTeleop"
     global_frame: map
     robot_base_frame: base_link
-    transform_tolerance: 0.5  # Increased from 0.1s for TF timing
+    transform_tolerance: 0.5
     use_sim_time: False
     simulate_ahead_time: 2.0
-    max_rotational_vel: 2.5  # 2.5 rad/s (increased)
-    min_rotational_vel: 0.3  # 0.3 rad/s minimum (lowered)
-    rotational_acc_lim: 5.0  # Acceleration (increased)
+    max_rotational_vel: 0.8
+    min_rotational_vel: 0.2
+    rotational_acc_lim: 2.0
 
 robot_state_publisher:
   ros__parameters:
@@ -349,10 +361,11 @@ velocity_smoother:
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [1.2, 0.0, 3.0]  # [linear, lateral, angular] in m/s and rad/s - INCREASED
-    min_velocity: [-0.7, 0.0, -3.0]  # Negative for reverse - INCREASED
-    max_accel: [2.0, 0.0, 5.0]  # Acceleration limits - INCREASED
-    max_decel: [-2.0, 0.0, -5.0]  # Deceleration limits - INCREASED
+    # SLOW LIMITS FOR MAPPING
+    max_velocity: [0.5, 0.0, 1.0]  # [linear, lateral, angular] - REDUCED
+    min_velocity: [-0.3, 0.0, -1.0]  # Gentle reverse
+    max_accel: [1.0, 0.0, 2.0]  # Smooth acceleration - REDUCED
+    max_decel: [-1.0, 0.0, -2.0]  # Smooth deceleration - REDUCED
     odom_topic: "/odometry/filtered"
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
