--- a/src/shbat_pkg/config/nav2_params_odom.yaml
+++ b/src/shbat_pkg/config/nav2_params_odom.yaml
@@ -1,54 +1,13 @@
-amcl:
-  ros__parameters:
-    use_sim_time: False
-    alpha1: 0.2
-    alpha2: 0.2
-    alpha3: 0.2
-    alpha4: 0.2
-    alpha5: 0.2
-    base_frame_id: "base_footprint"
-    beam_skip_distance: 0.5
-    beam_skip_error_threshold: 0.9
-    beam_skip_threshold: 0.3
-    do_beamskip: false
-    global_frame_id: "map"
-    lambda_short: 0.1
-    laser_likelihood_max_dist: 2.0
-    laser_max_range: 100.0
-    laser_min_range: -1.0
-    laser_model_type: "likelihood_field"
-    max_beams: 60
-    max_particles: 2000
-    min_particles: 500
-    odom_frame_id: "odom"
-    pf_err: 0.05
-    pf_z: 0.99
-    recovery_alpha_fast: 0.0
-    recovery_alpha_slow: 0.0
-    resample_interval: 1
-    robot_model_type: "nav2_amcl::DifferentialMotionModel"
-    save_pose_rate: 0.5
-    sigma_hit: 0.2
-    tf_broadcast: true
-    transform_tolerance: 1.0
-    update_min_a: 0.2
-    update_min_d: 0.25
-    z_hit: 0.5
-    z_max: 0.05
-    z_rand: 0.5
-    z_short: 0.05
-    scan_topic: scan
- 
 bt_navigator:
   ros__parameters:
     use_sim_time: False
-    global_frame: map  # Use RTAB-Map's map frame for global planning
+    global_frame: odom
     robot_base_frame: base_link
     odom_topic: /odometry/filtered
     bt_loop_duration: 10
     default_server_timeout: 20
     wait_for_service_timeout: 1000
-    transform_tolerance: 2.0  # Added: Wait up to 2s for transforms
+    transform_tolerance: 2.0
     plugin_lib_names:
       - nav2_compute_path_to_pose_action_bt_node
       - nav2_compute_path_through_poses_action_bt_node
@@ -65,7 +24,6 @@ bt_navigator:
       - nav2_goal_updated_condition_bt_node
       - nav2_globally_updated_goal_condition_bt_node
       - nav2_is_path_valid_condition_bt_node
-      - nav2_initial_pose_received_condition_bt_node
       - nav2_reinitialize_global_localization_service_bt_node
       - nav2_rate_controller_bt_node
       - nav2_distance_controller_bt_node
@@ -108,12 +66,13 @@ bt_navigator_navigate_to_pose_rclcpp_node:
 
 controller_server:
   ros__parameters:
-    use_sim_time: False  # Changed to False for real robot
-    controller_frequency: 20.0  # Increased from 1.0 Hz to 20 Hz for smooth control
-    min_x_velocity_threshold: 0.001  # Reduced threshold
+    use_sim_time: False
+    controller_frequency: 20.0
+    min_x_velocity_threshold: 0.001
     min_y_velocity_threshold: 0.001
     min_theta_velocity_threshold: 0.001
     failure_tolerance: 0.3
+    odom_topic: /odometry/filtered
     progress_checker_plugin: "progress_checker"
     goal_checker_plugins: ["general_goal_checker"]
     controller_plugins: ["FollowPath"]
@@ -121,37 +80,37 @@ controller_server:
 
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
-      required_movement_radius: 0.3  # Reduced from 0.5m - less strict
-      movement_time_allowance: 30.0  # Increased from 10s - more time to make progress
+      required_movement_radius: 0.5
+      movement_time_allowance: 60.0
 
     general_goal_checker:
       stateful: True
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.15  # Slightly relaxed
-      yaw_goal_tolerance: 0.25  # Tightened for better orientation
+      xy_goal_tolerance: 0.25
+      yaw_goal_tolerance: 0.5
 
     FollowPath:
       plugin: "nav2_regulated_pure_pursuit_controller::RegulatedPurePursuitController"
-      desired_linear_vel: 0.8  # 0.8 m/s = 80 cm/s normal speed (increased)
-      max_linear_vel: 1.2  # 1.2 m/s maximum (increased)
-      min_linear_vel: 0.0
-      max_angular_vel: 3.0  # 3.0 rad/s = 172 deg/s (increased)
-      min_angular_vel: 0.1  # Minimum rotation speed (lowered)
-      lookahead_dist: 0.6  # Reduced for tighter following
-      min_lookahead_dist: 0.3  # Reduced minimum
-      max_lookahead_dist: 1.0  # Reduced maximum
-      lookahead_time: 1.5
-      use_rotate_to_heading: true
-      rotate_to_heading_angular_vel: 2.5  # Rotation speed when aligning (increased)
-      transform_tolerance: 1.0  # Increased tolerance for TF timing issues
-      use_velocity_scaled_lookahead_dist: true  # Enable adaptive lookahead
-      allow_reversing: false  # Disabled reversing for safety
-      use_regulated_linear_velocity_scaling: true  # Enable velocity regulation
-      use_collision_detection: true  # Re-enabled for safety
-      cost_scaling_dist: 0.6  # Distance to scale velocity based on obstacles
-      cost_scaling_gain: 1.0  # How much to reduce velocity near obstacles
-      max_robot_pose_search_dist: 5.0  # How far to search for valid poses
-      inflation_cost_scaling_factor: 3.0  # Match costmap inflation
+      desired_linear_vel: 3.0
+      max_linear_vel: 3.5
+      min_linear_vel: 2.5
+      max_angular_vel: 4.0
+      min_angular_vel: 1.5
+      lookahead_dist: 0.4
+      min_lookahead_dist: 0.2
+      max_lookahead_dist: 0.8
+      lookahead_time: 1.0
+      use_rotate_to_heading: false
+      rotate_to_heading_angular_vel: 1.5
+      transform_tolerance: 0.1
+      use_velocity_scaled_lookahead_dist: false
+      allow_reversing: false
+      use_regulated_linear_velocity_scaling: false
+      use_collision_detection: false
+      cost_scaling_dist: 0.6
+      cost_scaling_gain: 1.0
+      max_robot_pose_search_dist: 10.0
+      inflation_cost_scaling_factor: 3.0
 
 local_costmap:
   local_costmap:
@@ -169,8 +128,8 @@ local_costmap:
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 5.0  # Moderate scaling for balance
-        inflation_radius: 0.30  # 30cm inflation (must be >= robot radius 0.25m)
+        cost_scaling_factor: 5.0
+        inflation_radius: 0.30
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -190,38 +149,35 @@ local_costmap:
           raytrace_max_range: 10.0
           raytrace_min_range: 0.0
           obstacle_max_range: 9.0
-          obstacle_min_range: 0.25  # 25cm - ignore robot body/antennas/beams
+          obstacle_min_range: 0.25
         point_cloud:
           topic: /zed2i/zed_node/point_cloud/cloud_registered
           max_obstacle_height: 2.0
-          min_obstacle_height: 0.40  # INCREASED: 40cm min - ignore floor and low objects
+          min_obstacle_height: 0.40
           clearing: True
           marking: True
           data_type: "PointCloud2"
           raytrace_max_range: 5.0
           raytrace_min_range: 0.0
           obstacle_max_range: 4.0
-          obstacle_min_range: 0.50  # INCREASED: 50cm - ignore robot body completely
-      static_layer:
-        plugin: "nav2_costmap_2d::StaticLayer"
-        map_subscribe_transient_local: True
+          obstacle_min_range: 0.50
       always_send_full_costmap: True
 
 global_costmap:
   global_costmap:
     ros__parameters:
-      update_frequency: 1.0
-      publish_frequency: 1.0
-      global_frame: map
+      update_frequency: 5.0
+      publish_frequency: 2.0
+      global_frame: odom
       robot_base_frame: base_link
       use_sim_time: False
-      rolling_window: true  # CHANGED: Use rolling window for odometry-only navigation
-      width: 100  # 100 cells × 0.10m = 10m x 10m rolling window
-      height: 100
+      rolling_window: true
+      width: 50
+      height: 50
       robot_radius: 0.25
-      resolution: 0.10
+      resolution: 0.05
       track_unknown_space: true
-      plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
+      plugins: ["obstacle_layer", "inflation_layer"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
@@ -235,52 +191,35 @@ global_costmap:
           raytrace_max_range: 10.0
           raytrace_min_range: 0.0
           obstacle_max_range: 9.0
-          obstacle_min_range: 0.25  # 25cm - ignore robot body/antennas/beams
+          obstacle_min_range: 0.25
         point_cloud:
           topic: /zed2i/zed_node/point_cloud/cloud_registered
           max_obstacle_height: 2.0
-          min_obstacle_height: 0.40  # INCREASED: 40cm min - ignore floor and low objects
+          min_obstacle_height: 0.40
           clearing: True
           marking: True
           data_type: "PointCloud2"
           raytrace_max_range: 5.0
           raytrace_min_range: 0.0
           obstacle_max_range: 4.0
-          obstacle_min_range: 0.50  # INCREASED: 50cm - ignore robot body completely
-      static_layer:
-        plugin: "nav2_costmap_2d::StaticLayer"
-        map_subscribe_transient_local: True
+          obstacle_min_range: 0.50
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 5.0  # Moderate scaling for balance
-        inflation_radius: 0.30  # 30cm inflation (must be >= robot radius 0.25m)
+        cost_scaling_factor: 5.0
+        inflation_radius: 0.30
       always_send_full_costmap: True
-
-map_server:
-  ros__parameters:
-    use_sim_time: False
-    yaml_filename: "/home/sahabat/sahabat_ws/src/shbat_pkg/map/map_save.yaml"
-
-map_saver:
-  ros__parameters:
-    use_sim_time: False
-    save_map_timeout: 5.0
-    free_thresh_default: 0.25
-    occupied_thresh_default: 0.65
-    map_subscribe_transient_local: True
 
 planner_server:
   ros__parameters:
     expected_planner_frequency: 20.0
     use_sim_time: False
-    transform_tolerance: 2.0  # Added: Wait up to 2s for transforms
+    transform_tolerance: 2.0
     planner_plugins: ["GridBased"]
     GridBased:
       plugin: "nav2_navfn_planner/NavfnPlanner"
       tolerance: 0.5
       use_astar: true
       allow_unknown: true
-    # Costmap for planning
     costmap_topic: global_costmap/costmap_raw
     footprint_topic: global_costmap/published_footprint
 
@@ -302,31 +241,31 @@ behavior_server:
     behavior_plugins: ["spin", "backup", "drive_on_heading", "assisted_teleop", "wait"]
     spin:
       plugin: "nav2_behaviors/Spin"
-      simulate_ahead_time: 2.0  # Increased from 1.0s for slower spins
-      max_rotational_vel: 2.5  # 2.5 rad/s for spinning (increased)
-      min_rotational_vel: 0.3  # 0.3 rad/s minimum (lowered)
-      rotational_acc_lim: 5.0  # Acceleration (increased)
-      time_allowance: 20.0  # NEW: Allow 20 seconds to complete spin
+      simulate_ahead_time: 2.0
+      max_rotational_vel: 2.5
+      min_rotational_vel: 0.3
+      rotational_acc_lim: 5.0
+      time_allowance: 20.0
     backup:
       plugin: "nav2_behaviors/BackUp"
       simulate_ahead_time: 1.0
-      max_linear_vel: 0.7  # 0.7 m/s for backup (increased)
-      min_linear_vel: 0.1  # 0.1 m/s minimum
-      linear_acc_lim: 2.0  # Acceleration (increased)
+      max_linear_vel: 0.7
+      min_linear_vel: 0.1
+      linear_acc_lim: 2.0
     drive_on_heading:
       plugin: "nav2_behaviors/DriveOnHeading"
     wait:
       plugin: "nav2_behaviors/Wait"
     assisted_teleop:
       plugin: "nav2_behaviors/AssistedTeleop"
-    global_frame: map
+    global_frame: odom
     robot_base_frame: base_link
-    transform_tolerance: 0.5  # Increased from 0.1s for TF timing
+    transform_tolerance: 0.5
     use_sim_time: False
     simulate_ahead_time: 2.0
-    max_rotational_vel: 2.5  # 2.5 rad/s (increased)
-    min_rotational_vel: 0.3  # 0.3 rad/s minimum (lowered)
-    rotational_acc_lim: 5.0  # Acceleration (increased)
+    max_rotational_vel: 2.5
+    min_rotational_vel: 0.3
+    rotational_acc_lim: 5.0
 
 robot_state_publisher:
   ros__parameters:
@@ -349,11 +288,11 @@ velocity_smoother:
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [1.2, 0.0, 3.0]  # [linear, lateral, angular] in m/s and rad/s - INCREASED
-    min_velocity: [-0.7, 0.0, -3.0]  # Negative for reverse - INCREASED
-    max_accel: [2.0, 0.0, 5.0]  # Acceleration limits - INCREASED
-    max_decel: [-2.0, 0.0, -5.0]  # Deceleration limits - INCREASED
+    max_velocity: [1.2, 0.0, 3.0]
+    min_velocity: [-0.7, 0.0, -3.0]
+    max_accel: [3.0, 0.0, 6.0]
+    max_decel: [-3.0, 0.0, -6.0]
     odom_topic: "/odometry/filtered"
     odom_duration: 0.1
-    deadband_velocity: [0.0, 0.0, 0.0]
+    deadband_velocity: [0.05, 0.0, 0.05]
     velocity_timeout: 1.0
