--- a/src/shbat_pkg/nav2_params.yaml
+++ b/src/shbat_pkg/nav2_params.yaml
@@ -1,6 +1,6 @@
 amcl:
   ros__parameters:
-    use_sim_time: False
+    use_sim_time: True
     alpha1: 0.2
     alpha2: 0.2
     alpha3: 0.2
@@ -38,17 +38,20 @@ amcl:
     z_rand: 0.5
     z_short: 0.05
     scan_topic: scan
- 
+
 bt_navigator:
   ros__parameters:
-    use_sim_time: False
-    global_frame: map  # Use RTAB-Map's map frame for global planning
+    use_sim_time: True
+    global_frame: map
     robot_base_frame: base_link
-    odom_topic: /odometry/filtered
+    odom_topic: /odom
     bt_loop_duration: 10
     default_server_timeout: 20
     wait_for_service_timeout: 1000
-    transform_tolerance: 2.0  # Added: Wait up to 2s for transforms
+    # 'default_nav_through_poses_bt_xml' and 'default_nav_to_pose_bt_xml' are use defaults:
+    # nav2_bt_navigator/navigate_to_pose_w_replanning_and_recovery.xml
+    # nav2_bt_navigator/navigate_through_poses_w_replanning_and_recovery.xml
+    # They can be set here or via a RewrittenYaml remap from a parent launch file to Nav2.
     plugin_lib_names:
       - nav2_compute_path_to_pose_action_bt_node
       - nav2_compute_path_through_poses_action_bt_node
@@ -100,58 +103,82 @@ bt_navigator:
 
 bt_navigator_navigate_through_poses_rclcpp_node:
   ros__parameters:
-    use_sim_time: False
+    use_sim_time: True
 
 bt_navigator_navigate_to_pose_rclcpp_node:
   ros__parameters:
-    use_sim_time: False
+    use_sim_time: True
 
 controller_server:
   ros__parameters:
-    use_sim_time: False  # Changed to False for real robot
-    controller_frequency: 20.0  # Increased from 1.0 Hz to 20 Hz for smooth control
-    min_x_velocity_threshold: 0.001  # Reduced threshold
-    min_y_velocity_threshold: 0.001
+    use_sim_time: True
+    controller_frequency: 20.0
+    min_x_velocity_threshold: 0.001
+    min_y_velocity_threshold: 0.5
     min_theta_velocity_threshold: 0.001
     failure_tolerance: 0.3
     progress_checker_plugin: "progress_checker"
-    goal_checker_plugins: ["general_goal_checker"]
+    goal_checker_plugins: ["general_goal_checker"] # "precise_goal_checker"
     controller_plugins: ["FollowPath"]
-    current_goal_checker: "general_goal_checker"
 
+    # Progress checker parameters
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
-      required_movement_radius: 0.3  # Reduced from 0.5m - less strict
-      movement_time_allowance: 30.0  # Increased from 10s - more time to make progress
-
+      required_movement_radius: 0.5
+      movement_time_allowance: 10.0
+    # Goal checker parameters
+    #precise_goal_checker:
+    #  plugin: "nav2_controller::SimpleGoalChecker"
+    #  xy_goal_tolerance: 0.25
+    #  yaw_goal_tolerance: 0.25
+    #  stateful: True
     general_goal_checker:
       stateful: True
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.15  # Slightly relaxed
-      yaw_goal_tolerance: 0.25  # Tightened for better orientation
-
+      xy_goal_tolerance: 0.25
+      yaw_goal_tolerance: 0.25
+    # DWB parameters
     FollowPath:
-      plugin: "nav2_regulated_pure_pursuit_controller::RegulatedPurePursuitController"
-      desired_linear_vel: 0.8  # 0.8 m/s = 80 cm/s normal speed (increased)
-      max_linear_vel: 1.2  # 1.2 m/s maximum (increased)
-      min_linear_vel: 0.0
-      max_angular_vel: 3.0  # 3.0 rad/s = 172 deg/s (increased)
-      min_angular_vel: 0.1  # Minimum rotation speed (lowered)
-      lookahead_dist: 0.6  # Reduced for tighter following
-      min_lookahead_dist: 0.3  # Reduced minimum
-      max_lookahead_dist: 1.0  # Reduced maximum
-      lookahead_time: 1.5
-      use_rotate_to_heading: true
-      rotate_to_heading_angular_vel: 2.5  # Rotation speed when aligning (increased)
-      transform_tolerance: 1.0  # Increased tolerance for TF timing issues
-      use_velocity_scaled_lookahead_dist: true  # Enable adaptive lookahead
-      allow_reversing: false  # Disabled reversing for safety
-      use_regulated_linear_velocity_scaling: true  # Enable velocity regulation
-      use_collision_detection: true  # Re-enabled for safety
-      cost_scaling_dist: 0.6  # Distance to scale velocity based on obstacles
-      cost_scaling_gain: 1.0  # How much to reduce velocity near obstacles
-      max_robot_pose_search_dist: 5.0  # How far to search for valid poses
-      inflation_cost_scaling_factor: 3.0  # Match costmap inflation
+      plugin: "dwb_core::DWBLocalPlanner"
+      debug_trajectory_details: True
+      min_vel_x: 0.0
+      min_vel_y: 0.0
+      max_vel_x: 0.26
+      max_vel_y: 0.0
+      max_vel_theta: 1.0
+      min_speed_xy: 0.0
+      max_speed_xy: 0.26
+      min_speed_theta: 0.0
+      # Add high threshold velocity for turtlebot 3 issue.
+      # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
+      acc_lim_x: 2.5
+      acc_lim_y: 0.0
+      acc_lim_theta: 3.2
+      decel_lim_x: -2.5
+      decel_lim_y: 0.0
+      decel_lim_theta: -3.2
+      vx_samples: 20
+      vy_samples: 5
+      vtheta_samples: 20
+      sim_time: 1.7
+      linear_granularity: 0.05
+      angular_granularity: 0.025
+      transform_tolerance: 0.2
+      xy_goal_tolerance: 0.25
+      trans_stopped_velocity: 0.25
+      short_circuit_trajectory_evaluation: True
+      stateful: True
+      critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
+      BaseObstacle.scale: 0.02
+      PathAlign.scale: 32.0
+      PathAlign.forward_point_distance: 0.1
+      GoalAlign.scale: 24.0
+      GoalAlign.forward_point_distance: 0.1
+      PathDist.scale: 32.0
+      GoalDist.scale: 24.0
+      RotateToGoal.scale: 32.0
+      RotateToGoal.slowing_factor: 5.0
+      RotateToGoal.lookahead_time: -1.0
 
 local_costmap:
   local_costmap:
@@ -160,17 +187,17 @@ local_costmap:
       publish_frequency: 2.0
       global_frame: odom
       robot_base_frame: base_link
-      use_sim_time: False
+      use_sim_time: True
       rolling_window: true
       width: 3
       height: 3
       resolution: 0.05
-      robot_radius: 0.25
+      robot_radius: 0.22
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 5.0  # Moderate scaling for balance
-        inflation_radius: 0.30  # 30cm inflation (must be >= robot radius 0.25m)
+        cost_scaling_factor: 3.0
+        inflation_radius: 0.55
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -180,28 +207,17 @@ local_costmap:
         z_voxels: 16
         max_obstacle_height: 2.0
         mark_threshold: 0
-        observation_sources: scan point_cloud
+        observation_sources: scan
         scan:
           topic: /scan
           max_obstacle_height: 2.0
           clearing: True
           marking: True
           data_type: "LaserScan"
-          raytrace_max_range: 10.0
+          raytrace_max_range: 3.0
           raytrace_min_range: 0.0
-          obstacle_max_range: 9.0
-          obstacle_min_range: 0.25  # 25cm - ignore robot body/antennas/beams
-        point_cloud:
-          topic: /zed2i/zed_node/point_cloud/cloud_registered
-          max_obstacle_height: 2.0
-          min_obstacle_height: 0.40  # INCREASED: 40cm min - ignore floor and low objects
-          clearing: True
-          marking: True
-          data_type: "PointCloud2"
-          raytrace_max_range: 5.0
-          raytrace_min_range: 0.0
-          obstacle_max_range: 4.0
-          obstacle_min_range: 0.50  # INCREASED: 50cm - ignore robot body completely
+          obstacle_max_range: 2.5
+          obstacle_min_range: 0.0
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
         map_subscribe_transient_local: True
@@ -214,56 +230,44 @@ global_costmap:
       publish_frequency: 1.0
       global_frame: map
       robot_base_frame: base_link
-      use_sim_time: False
-      rolling_window: true  # CHANGED: Use rolling window for odometry-only navigation
-      width: 100  # 100 cells × 0.10m = 10m x 10m rolling window
-      height: 100
-      robot_radius: 0.25
-      resolution: 0.10
+      use_sim_time: True
+      robot_radius: 0.22
+      resolution: 0.05
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
-        observation_sources: scan point_cloud
+        observation_sources: scan
         scan:
           topic: /scan
           max_obstacle_height: 2.0
           clearing: True
           marking: True
           data_type: "LaserScan"
-          raytrace_max_range: 10.0
+          raytrace_max_range: 3.0
           raytrace_min_range: 0.0
-          obstacle_max_range: 9.0
-          obstacle_min_range: 0.25  # 25cm - ignore robot body/antennas/beams
-        point_cloud:
-          topic: /zed2i/zed_node/point_cloud/cloud_registered
-          max_obstacle_height: 2.0
-          min_obstacle_height: 0.40  # INCREASED: 40cm min - ignore floor and low objects
-          clearing: True
-          marking: True
-          data_type: "PointCloud2"
-          raytrace_max_range: 5.0
-          raytrace_min_range: 0.0
-          obstacle_max_range: 4.0
-          obstacle_min_range: 0.50  # INCREASED: 50cm - ignore robot body completely
+          obstacle_max_range: 2.5
+          obstacle_min_range: 0.0
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 5.0  # Moderate scaling for balance
-        inflation_radius: 0.30  # 30cm inflation (must be >= robot radius 0.25m)
+        cost_scaling_factor: 3.0
+        inflation_radius: 0.55
       always_send_full_costmap: True
 
 map_server:
   ros__parameters:
-    use_sim_time: False
-    yaml_filename: "/home/sahabat/sahabat_ws/src/shbat_pkg/map/map_save.yaml"
+    use_sim_time: True
+    # Overridden in launch by the "map" launch configuration or provided default value.
+    # To use in yaml, remove the default "map" value in the tb3_simulation_launch.py file & provide full path to map below.
+    yaml_filename: ""
 
 map_saver:
   ros__parameters:
-    use_sim_time: False
+    use_sim_time: True
     save_map_timeout: 5.0
     free_thresh_default: 0.25
     occupied_thresh_default: 0.65
@@ -272,21 +276,17 @@ map_saver:
 planner_server:
   ros__parameters:
     expected_planner_frequency: 20.0
-    use_sim_time: False
-    transform_tolerance: 2.0  # Added: Wait up to 2s for transforms
+    use_sim_time: True
     planner_plugins: ["GridBased"]
     GridBased:
       plugin: "nav2_navfn_planner/NavfnPlanner"
       tolerance: 0.5
-      use_astar: true
+      use_astar: false
       allow_unknown: true
-    # Costmap for planning
-    costmap_topic: global_costmap/costmap_raw
-    footprint_topic: global_costmap/published_footprint
 
 smoother_server:
   ros__parameters:
-    use_sim_time: False
+    use_sim_time: True
     smoother_plugins: ["simple_smoother"]
     simple_smoother:
       plugin: "nav2_smoother::SimpleSmoother"
@@ -302,39 +302,30 @@ behavior_server:
     behavior_plugins: ["spin", "backup", "drive_on_heading", "assisted_teleop", "wait"]
     spin:
       plugin: "nav2_behaviors/Spin"
-      simulate_ahead_time: 2.0  # Increased from 1.0s for slower spins
-      max_rotational_vel: 2.5  # 2.5 rad/s for spinning (increased)
-      min_rotational_vel: 0.3  # 0.3 rad/s minimum (lowered)
-      rotational_acc_lim: 5.0  # Acceleration (increased)
-      time_allowance: 20.0  # NEW: Allow 20 seconds to complete spin
     backup:
       plugin: "nav2_behaviors/BackUp"
-      simulate_ahead_time: 1.0
-      max_linear_vel: 0.7  # 0.7 m/s for backup (increased)
-      min_linear_vel: 0.1  # 0.1 m/s minimum
-      linear_acc_lim: 2.0  # Acceleration (increased)
     drive_on_heading:
       plugin: "nav2_behaviors/DriveOnHeading"
     wait:
       plugin: "nav2_behaviors/Wait"
     assisted_teleop:
       plugin: "nav2_behaviors/AssistedTeleop"
-    global_frame: map
+    global_frame: odom
     robot_base_frame: base_link
-    transform_tolerance: 0.5  # Increased from 0.1s for TF timing
-    use_sim_time: False
+    transform_tolerance: 0.1
+    use_sim_time: true
     simulate_ahead_time: 2.0
-    max_rotational_vel: 2.5  # 2.5 rad/s (increased)
-    min_rotational_vel: 0.3  # 0.3 rad/s minimum (lowered)
-    rotational_acc_lim: 5.0  # Acceleration (increased)
+    max_rotational_vel: 1.0
+    min_rotational_vel: 0.4
+    rotational_acc_lim: 3.2
 
 robot_state_publisher:
   ros__parameters:
-    use_sim_time: False
+    use_sim_time: True
 
 waypoint_follower:
   ros__parameters:
-    use_sim_time: False
+    use_sim_time: True
     loop_rate: 20
     stop_on_failure: false
     waypoint_task_executor_plugin: "wait_at_waypoint"
@@ -345,15 +336,15 @@ waypoint_follower:
 
 velocity_smoother:
   ros__parameters:
-    use_sim_time: False
+    use_sim_time: True
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [1.2, 0.0, 3.0]  # [linear, lateral, angular] in m/s and rad/s - INCREASED
-    min_velocity: [-0.7, 0.0, -3.0]  # Negative for reverse - INCREASED
-    max_accel: [2.0, 0.0, 5.0]  # Acceleration limits - INCREASED
-    max_decel: [-2.0, 0.0, -5.0]  # Deceleration limits - INCREASED
-    odom_topic: "/odometry/filtered"
+    max_velocity: [0.26, 0.0, 1.0]
+    min_velocity: [-0.26, 0.0, -1.0]
+    max_accel: [2.5, 0.0, 3.2]
+    max_decel: [-2.5, 0.0, -3.2]
+    odom_topic: "odom"
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
     velocity_timeout: 1.0
