--- a/src/shbat_pkg/package.xml
+++ b/src/shbat_pkg/package.xml
@@ -57,6 +57,11 @@
 <depend>navigation2</depend>
 <depend>nav2_map_server</depend>
 <depend>nav_msgs</depend>
+<depend>geometry_msgs</depend>
+<depend>std_msgs</depend>
+
+<!-- Motor driver dependencies -->
+<exec_depend>python3-numpy</exec_depend>
 
 
   <export>
